# ai-career-assistant-be

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/models/: interview_request.py
app/routes/: resume.py
